Fix: 방 목록 불러올시 QueryDsl 부분 약간 수정