@@ -6,6 +6,8 @@ import lombok.RequiredArgsConstructor;
 import ssafy.GeniusOfInvestment.square_room.dto.response.SquareRoom;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 import static ssafy.GeniusOfInvestment._common.entity.QRoom.room;
 
 @RequiredArgsConstructor
@@ -26,14 +28,14 @@ public class ChannelRepositoryImpl implements ChannelRepositoryCustom{
                 .fetch()
                 .stream()
                 .map(this::TupleToSquareroom)
-                .toList();
+                .collect(Collectors.toList());
     }
     private SquareRoom TupleToSquareroom(Tuple tuple){
         return SquareRoom
                 .builder()
                     .id(tuple.get(0,Long.class))
                     .title(tuple.get(1,String.class))
-                    .isPrivate(tuple.get(2,Boolean.class))
+                    .isPrivate(!Boolean.TRUE.equals(tuple.get(2, Boolean.class)))
                 .build();
     }
 }
